@@ -1,5 +1,5 @@
 Name: Windows
-Version: 1.3.1
+Version: 1.3.1+
 Date: 2019-01-08
 Author: Andy Adler <alder@ncf.ca>, John Donoghue <john.donoghue@ieee.org>
 Maintainer: John Donoghue <john.donoghue@ieee.org>
