@@ -4,6 +4,7 @@ Windows Utilities
  win32_MessageBox
  win32_ReadRegistry
  win32api
+ winopen
  @PKGWINQUERYREGFUNC@
 COM Interface
  actxserver
